name: redemptor
version: 1.0.0
build-type: Simple
cabal-version: >= 1.12

executable redemptor
  build-depends: base
               , parsec
  main-is: Main.hs
  other-modules: Compile
               , Evaluate
               , Gmachine
               , Language
               , Parser
               , Util
  ghc-options: -Wall
  default-language: Haskell2010